--- a/package.json
+++ b/package.json
@@ -16,19 +16,29 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.8",
+    "body-parser": "^1.19.0",
+    "commonjs": "0.0.1",
+    "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
     "emojionearea": "^3.4.1",
     "eslint": "^6.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "install": "^0.13.0",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "redis": "^2.8.0",
+    "requirejs": "^2.3.6",
     "serve-favicon": "^2.5.0",
+    "ws": "^7.2.0",
     "yarn": "^1.19.1"
   },
   "devDependencies": {
     "jest": "^24.9.0",
+    "jest-environment-webdriver": "^0.2.0",
     "jest-fetch-mock": "^2.1.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
   }
