--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
     "emojionearea": "^3.4.1",
-    "eslint": "^6.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "install": "^0.13.0",
@@ -34,9 +33,12 @@
     "requirejs": "^2.3.6",
     "serve-favicon": "^2.5.0",
     "ws": "^7.2.0",
-    "yarn": "^1.19.1"
+    "yarn": "^1.21.0"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "jest-environment-webdriver": "^0.2.0",
     "jest-fetch-mock": "^2.1.2",
