--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "jest"
   },
+  "author": "YFMao,ZTZhu",
+  "license": "ISC",
   "jest": {
     "automock": false,
     "setupFiles": [
       "./setupJest.js"
-    ]
+    ],
+    "testTimeout": 20000
   },
-  "author": "YFMao,ZTZhu",
-  "license": "ISC",
   "dependencies": {
-    "angular": "^1.7.8",
+    "angular": "^1.7.9",
+    "angular-mock": "^1.0.0",
+    "angular-mocks": "^1.7.9",
     "body-parser": "^1.19.0",
     "commonjs": "0.0.1",
     "connect-redis": "^4.0.3",
@@ -31,9 +34,8 @@
     "passport": "^0.4.0",
     "redis": "^2.8.0",
     "requirejs": "^2.3.6",
-    "serve-favicon": "^2.5.0",
-    "ws": "^7.2.0",
-    "yarn": "^1.21.0"
+    "sinon": "^7.5.0",
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
