--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "author": "YFMao,ZTZhu",
   "license": "ISC",
@@ -17,31 +17,35 @@
   },
   "dependencies": {
     "angular": "^1.7.9",
-    "angular-mock": "^1.0.0",
-    "angular-mocks": "^1.7.9",
     "body-parser": "^1.19.0",
     "commonjs": "0.0.1",
     "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
     "emojionearea": "^3.4.1",
+    "enzyme": "^3.10.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "install": "^0.13.0",
     "jade": "^1.11.0",
+    "jest-enzyme": "^7.1.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "redis": "^2.8.0",
     "requirejs": "^2.3.6",
     "sinon": "^7.5.0",
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.7.9",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "jest-environment-webdriver": "^0.2.0",
     "jest-fetch-mock": "^2.1.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
